Updated posts of ACP-600

--- a/_posts/2020-09-13-acp-600-labs.md
+++ b/_posts/2020-09-13-acp-600-labs.md
@@ -1,5 +1,5 @@
 ---
-title: "Preparing for ACP-600 Project Administration in Jira Server: Part II Labs"
+title: "Preparing ACP-600 Project Administration in Jira Server: Part II Labs"
 categories:
   - sysadmin
 tags:
